--- a/css/styles.css
+++ b/css/styles.css
@@ -73,12 +73,27 @@ img {
 }
 
 .navbar__toggler {
-    background: transparent;
+    width: 32px;
+    height: 18px;
+    background-color: transparent;
+    background-image: url(../img/icon-hamburger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto;
     border: 0;
     cursor: pointer;
 }
 
+.navbar__toggler--active {
+    width: 26px;
+    height: 26px;
+    background-image: url(../img/icon-close.svg);
+}
+
 .nav__container {
+    transform: scale(0);
+    visibility: hidden;
+    opacity: 0;
     position: absolute;
     top: 100%;
     left: 0;
@@ -88,6 +103,13 @@ img {
     padding: 1.5rem 1.5rem 2rem;
     box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.243444);
     border-radius: 5px;
+    transition: all .3s ease-in-out;
+}
+
+.nav__container--active {
+    transform: scale(1);
+    visibility: visible;
+    opacity: 1;
 }
 
 .nav {
