--- a/css/styles.css
+++ b/css/styles.css
@@ -305,3 +305,47 @@ img {
     letter-spacing: 0.5px;
     color: var(--veryDarkGrayishBlue);
 }
+
+.state {
+    padding-top: 173px;
+}
+
+.state__container {
+    background-image: url(../img/bg-pattern-circles.svg) ,linear-gradient(135deg, #2D2E40 0%, #3F4164 100%);
+    background-repeat: no-repeat, no-repeat;
+    background-size: 602px 604px, cover;
+    background-position: top -237px left -113px, center center;
+    border-radius: 0px 100px;
+    position: relative;
+    text-align: center;
+    color: #ffffff;
+    padding: 13.813rem 1.5rem 5.813rem;
+}
+
+.state__img {
+    width: 328px;
+    height: 347px;
+    background-image: url(../img/illustration-phones.svg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 108%;
+    position: absolute;
+    top: -173px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.state__title {
+    font-size: 2.5rem;
+    line-height: 51px;
+    letter-spacing: -1.2px;
+}
+
+.state__text {
+    margin-top: 1.875rem;
+    font-size: 1rem;
+    line-height: 28px;
+    letter-spacing: 0.5px;
+    height: 179px;
+}
+
