--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@ img {
 
 .container {
     width: calc(100% - 3rem);
+    max-width: 1110px;
     margin: 0 auto;
 }
 
@@ -379,3 +380,45 @@ img {
     height: 179px;
 }
 
+.footer {
+    background-color: var(--veryDarkBlackBlue);
+    padding: 4.688rem 0;
+    border-radius: 0px 100px 0px 0px;
+}
+
+.footer__logo {
+    display: flex;
+    justify-content: center;
+}
+
+.footer__boxes {
+    margin-top: 4.5rem;
+    display: grid;
+    gap: 2.5rem;
+}
+
+.footer__box {
+    text-align: center;
+}
+
+.footer__title {
+    font-size: 1.125rem;
+    line-height: 33px;
+    font-weight: 500;
+    color: #ffffff;
+}
+
+.footer__nav {
+    margin-top: 1.313rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer__link {
+    display: inline-block;
+    font-size: 1.125rem;
+    line-height: 33px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, .75);
+}
